Added some extra preloaded entities
